--- a/infrastructure/config/sample-zuad.conf
+++ b/infrastructure/config/sample-zuad.conf
@@ -68,9 +68,14 @@
 ; You may specify each IP address with or without a port. The default port will
 ; be added automatically if one is not specified here.
 ; addpeer=192.168.1.1
-; addpeer=10.0.0.2:16111
+; addpeer=10.0.0.2:46005
+; addpeer=112.78.177.43
+; addpeer=177.22.145.244
+; addpeer=134.209.104.206
+; addpeer= 36.73.214.239
+; addpeer=125.164.1.204
 ; addpeer=fe80::1
-; addpeer=[fe80::2]:16111
+; addpeer=[fe80::2]:46005
 
 ; Add persistent peers that you ONLY want to connect to as desired. One peer
 ; per line. You may specify each IP address with or without a port. The
@@ -78,9 +83,14 @@
 ; NOTE: Specifying this option has other side effects as described above in
 ; the 'addpeer' versus 'connect' summary section.
 ; connect=192.168.1.1
-; connect=10.0.0.2:16111
+; connect=177.22.145.244
+; connect=36.73.214.239
+; connect=112.78.177.43
+; connect=128.199.117.128
+; connect=134.209.104.206
+; connect=10.0.0.2:46005
 ; connect=fe80::1
-; connect=[fe80::2]:16111
+; connect=[fe80::2]:46005
 
 ; Maximum number of inbound and outbound peers.
 ; maxinpeers=125
@@ -99,6 +109,10 @@
 ; Add whitelisted IP networks and IPs. Connected peers whose IP matches a
 ; whitelist will not have their ban score increased.
 ; whitelist=127.0.0.1
+; whitelist=177.22.145.244
+; whitelist=36.73.214.239
+; whitelist=128.199.117.128
+; whitelist=134.209.104.206
 ; whitelist=::1
 ; whitelist=192.168.0.0/24
 ; whitelist=fd00::/16
@@ -117,24 +131,24 @@
 ;  listen=0.0.0.0
 ; All ipv6 interfaces on default port:
 ;   listen=::
-; All interfaces on port 16111:
-;   listen=:16111
-; All ipv4 interfaces on port 16111:
-;   listen=0.0.0.0:16111
-; All ipv6 interfaces on port 16111:
-;   listen=[::]:16111
-; Only ipv4 localhost on port 8333:
-;   listen=127.0.0.1:8333
-; Only ipv6 localhost on port 8333:
-;   listen=[::1]:8333
-; Only ipv4 localhost on non-standard port 8336:
-;   listen=127.0.0.1:8336
-; All interfaces on non-standard port 8336:
-;   listen=:8336
-; All ipv4 interfaces on non-standard port 8336:
-;   listen=0.0.0.0:8336
-; All ipv6 interfaces on non-standard port 8336:
-;   listen=[::]:8336
+; All interfaces on port 46005:
+;   listen=:46005
+; All ipv4 interfaces on port 46005:
+;   listen=0.0.0.0:46005
+; All ipv6 interfaces on port 46005:
+;   listen=[::]:46005
+; Only ipv4 localhost on port 46005:
+;   listen=127.0.0.1:46005
+; Only ipv6 localhost on port 46005:
+;   listen=[::1]:46005
+; Only ipv4 localhost on non-standard port 46005:
+;   listen=127.0.0.1:46005
+; All interfaces on non-standard port 46005:
+;   listen=:46005
+; All ipv4 interfaces on non-standard port 46005:
+;   listen=0.0.0.0:46005
+; All ipv6 interfaces on non-standard port 46005:
+;   listen=[::]:46005
 
 ; Disable listening for incoming connections. This will override all listeners.
 ; nolisten=1
@@ -162,24 +176,24 @@
 ;   rpclisten=0.0.0.0
 ; All ipv6 interfaces on default port:
 ;   rpclisten=::
-; All interfaces on port 16110:
-;   rpclisten=:16110
-; All ipv4 interfaces on port 16110:
-;   rpclisten=0.0.0.0:16110
-; All ipv6 interfaces on port 16110:
-;   rpclisten=[::]:16110
-; Only ipv4 localhost on port 16110:
-;   rpclisten=127.0.0.1:16110
-; Only ipv6 localhost on port 16110:
-;   rpclisten=[::1]:16110
-; Only ipv4 localhost on non-standard port 8337:
-;   rpclisten=127.0.0.1:8337
-; All interfaces on non-standard port 8337:
-;   rpclisten=:8337
-; All ipv4 interfaces on non-standard port 8337:
-;   rpclisten=0.0.0.0:8337
-; All ipv6 interfaces on non-standard port 8337:
-;   rpclisten=[::]:8337
+; All interfaces on port 46009:
+;   rpclisten=:46009
+; All ipv4 interfaces on port 46009:
+;   rpclisten=0.0.0.0:46009
+; All ipv6 interfaces on port 46009:
+;   rpclisten=[::]:46009
+; Only ipv4 localhost on port 46009:
+;   rpclisten=127.0.0.1:46009
+; Only ipv6 localhost on port 46009:
+;   rpclisten=[::1]:46009
+; Only ipv4 localhost on non-standard port 46009:
+;   rpclisten=127.0.0.1:46009
+; All interfaces on non-standard port 46009:
+;   rpclisten=:46009
+; All ipv4 interfaces on non-standard port 46009:
+;   rpclisten=0.0.0.0:46009
+; All ipv6 interfaces on non-standard port 46009:
+;   rpclisten=[::]:46009
 
 ; Specify the maximum number of concurrent RPC clients for standard connections.
 ; rpcmaxclients=10
