--- a/infrastructure/config/sample-zuad.conf
+++ b/infrastructure/config/sample-zuad.conf
@@ -71,6 +71,9 @@
 ; addpeer=10.0.0.2:46005
 ; addpeer=fe80::1
 ; addpeer=[fe80::2]:46005
+; addpeer=128.199.117.128:46005
+; addpeer=134.209.104.206:46005
+
 
 ; Add persistent peers that you ONLY want to connect to as desired. One peer
 ; per line. You may specify each IP address with or without a port. The
