--- a/infrastructure/config/sample-zuad.conf
+++ b/infrastructure/config/sample-zuad.conf
@@ -72,6 +72,7 @@
 ; addpeer=fe80::1
 ; addpeer=[fe80::2]:46005
 ; addpeer=128.199.117.128:46005
+; addpeer=45.90.220.177:46005
 ; addpeer=134.209.104.206:46005
 
 
