--- a/infrastructure/config/sample-zuad.conf
+++ b/infrastructure/config/sample-zuad.conf
@@ -75,7 +75,7 @@
 ; addpeer=45.90.220.177:46005
 ; addpeer=112.78.177.43:46005
 ; addpeer=134.209.104.206:46005
-: addpeer=177.22.145.244:46005
+; addpeer=177.22.145.244:46005
 
 
 ; Add persistent peers that you ONLY want to connect to as desired. One peer
