--- a/infrastructure/config/sample-zuad.conf
+++ b/infrastructure/config/sample-zuad.conf
@@ -6,12 +6,12 @@
 
 ; The directory to store data such as the block DAG and peer addresses. The
 ; block DAG takes several GB, so this location must have a lot of free space.
-; The default is ~/.zuad/data on POSIX OSes, $LOCALAPPDATA/Zuad/data on Windows,
-; ~/Library/Application Support/Zuad/data on Mac OS, and $home/zuad/data on
+; The default is ~/.kaspad/data on POSIX OSes, $LOCALAPPDATA/Kaspad/data on Windows,
+; ~/Library/Application Support/Kaspad/data on Mac OS, and $home/kaspad/data on
 ; Plan9. Environment variables are expanded so they may be used. NOTE: Windows
 ; environment variables are typically %VARIABLE%, but they must be accessed with
 ; $VARIABLE here. Also, ~ is expanded to $LOCALAPPDATA on Windows.
-; datadir=~/.zuad/data
+; datadir=~/.kaspad/data
 
 
 ; ------------------------------------------------------------------------------
@@ -34,7 +34,7 @@
 ; upnp=1
 
 ; Specify the external IP addresses your node is listening on. One address per
-; line. zuad will not contact 3rd-party sites to obtain external ip addresses.
+; line. kaspad will not contact 3rd-party sites to obtain external ip addresses.
 ; This means if you are behind NAT, your node will not be able to advertise a
 ; reachable address unless you specify it here or enable the 'upnp' option (and
 ; have a supported device).
@@ -46,7 +46,7 @@
 ;
 ; Only one of the following two options, 'addpeer' and 'connect', may be
 ; specified. Both allow you to specify peers that you want to stay connected
-; with, but the behavior is slightly different. By default, zuad will query DNS
+; with, but the behavior is slightly different. By default, kaspad will query DNS
 ; to find peers to connect to, so unless you have a specific reason such as
 ; those described below, you probably won't need to modify anything here.
 ;
@@ -68,10 +68,9 @@
 ; You may specify each IP address with or without a port. The default port will
 ; be added automatically if one is not specified here.
 ; addpeer=192.168.1.1
-; addpeer=10.0.0.2:46005
+; addpeer=10.0.0.2:16111
 ; addpeer=fe80::1
-; addpeer=[fe80::2]:46005
-
+; addpeer=[fe80::2]:16111
 
 ; Add persistent peers that you ONLY want to connect to as desired. One peer
 ; per line. You may specify each IP address with or without a port. The
@@ -79,9 +78,9 @@
 ; NOTE: Specifying this option has other side effects as described above in
 ; the 'addpeer' versus 'connect' summary section.
 ; connect=192.168.1.1
-; connect=10.0.0.2:46005
+; connect=10.0.0.2:16111
 ; connect=fe80::1
-; connect=[fe80::2]:46005
+; connect=[fe80::2]:16111
 
 ; Maximum number of inbound and outbound peers.
 ; maxinpeers=125
@@ -104,7 +103,7 @@
 ; whitelist=192.168.0.0/24
 ; whitelist=fd00::/16
 
-; Disable DNS seeding for peers. By default, when zuad starts, it will use
+; Disable DNS seeding for peers. By default, when kaspad starts, it will use
 ; DNS to query for available peers to connect with.
 ; nodnsseed=1
 
@@ -118,12 +117,12 @@
 ;  listen=0.0.0.0
 ; All ipv6 interfaces on default port:
 ;   listen=::
-; All interfaces on port 46005:
-;   listen=:46005
-; All ipv4 interfaces on port 46005:
-;   listen=0.0.0.0:46005
-; All ipv6 interfaces on port 46005:
-;   listen=[::]:46005
+; All interfaces on port 16111:
+;   listen=:16111
+; All ipv4 interfaces on port 16111:
+;   listen=0.0.0.0:16111
+; All ipv6 interfaces on port 16111:
+;   listen=[::]:16111
 ; Only ipv4 localhost on port 8333:
 ;   listen=127.0.0.1:8333
 ; Only ipv6 localhost on port 8333:
@@ -149,7 +148,7 @@
 
 ; ------------------------------------------------------------------------------
 ; RPC server options - The following options control the built-in RPC server
-; which is used to control and query information from a running zuad process.
+; which is used to control and query information from a running kaspad process.
 ; ------------------------------------------------------------------------------
 
 ; Specify the interfaces for the RPC server listen on. One listen address per
@@ -163,16 +162,16 @@
 ;   rpclisten=0.0.0.0
 ; All ipv6 interfaces on default port:
 ;   rpclisten=::
-; All interfaces on port 46009:
-;   rpclisten=:46009
-; All ipv4 interfaces on port 46009:
-;   rpclisten=0.0.0.0:46009
-; All ipv6 interfaces on port 46009:
-;   rpclisten=[::]:46009
-; Only ipv4 localhost on port 46009:
-;   rpclisten=127.0.0.1:46009
-; Only ipv6 localhost on port 46009:
-;   rpclisten=[::1]:46009
+; All interfaces on port 16110:
+;   rpclisten=:16110
+; All ipv4 interfaces on port 16110:
+;   rpclisten=0.0.0.0:16110
+; All ipv6 interfaces on port 16110:
+;   rpclisten=[::]:16110
+; Only ipv4 localhost on port 16110:
+;   rpclisten=127.0.0.1:16110
+; Only ipv6 localhost on port 16110:
+;   rpclisten=[::1]:16110
 ; Only ipv4 localhost on non-standard port 8337:
 ;   rpclisten=127.0.0.1:8337
 ; All interfaces on non-standard port 8337:
@@ -224,7 +223,7 @@
 ; Debug logging level.
 ; Valid levels are {trace, debug, info, warn, error, critical}
 ; You may also specify <subsystem>=<level>,<subsystem2>=<level>,... to set
-; log level for individual subsystems. Use zuad --loglevel=show to list
+; log level for individual subsystems. Use kaspad --loglevel=show to list
 ; available subsystems.
 ; loglevel=info
 
@@ -232,4 +231,3 @@
 ; be disabled if this option is not specified. The profile information can be
 ; accessed at http://localhost:<profileport>/debug/pprof once running.
 ; profile=6061
-
