--- a/infrastructure/config/sample-zuad.conf
+++ b/infrastructure/config/sample-zuad.conf
@@ -6,12 +6,12 @@
 
 ; The directory to store data such as the block DAG and peer addresses. The
 ; block DAG takes several GB, so this location must have a lot of free space.
-; The default is ~/.kaspad/data on POSIX OSes, $LOCALAPPDATA/Kaspad/data on Windows,
-; ~/Library/Application Support/Kaspad/data on Mac OS, and $home/kaspad/data on
+; The default is ~/.zuad/data on POSIX OSes, $LOCALAPPDATA/Zuad/data on Windows,
+; ~/Library/Application Support/Zuad/data on Mac OS, and $home/zuad/data on
 ; Plan9. Environment variables are expanded so they may be used. NOTE: Windows
 ; environment variables are typically %VARIABLE%, but they must be accessed with
 ; $VARIABLE here. Also, ~ is expanded to $LOCALAPPDATA on Windows.
-; datadir=~/.kaspad/data
+; datadir=~/.zuad/data
 
 
 ; ------------------------------------------------------------------------------
@@ -34,7 +34,7 @@
 ; upnp=1
 
 ; Specify the external IP addresses your node is listening on. One address per
-; line. kaspad will not contact 3rd-party sites to obtain external ip addresses.
+; line. zuad will not contact 3rd-party sites to obtain external ip addresses.
 ; This means if you are behind NAT, your node will not be able to advertise a
 ; reachable address unless you specify it here or enable the 'upnp' option (and
 ; have a supported device).
@@ -46,7 +46,7 @@
 ;
 ; Only one of the following two options, 'addpeer' and 'connect', may be
 ; specified. Both allow you to specify peers that you want to stay connected
-; with, but the behavior is slightly different. By default, kaspad will query DNS
+; with, but the behavior is slightly different. By default, zuad will query DNS
 ; to find peers to connect to, so unless you have a specific reason such as
 ; those described below, you probably won't need to modify anything here.
 ;
@@ -103,7 +103,7 @@
 ; whitelist=192.168.0.0/24
 ; whitelist=fd00::/16
 
-; Disable DNS seeding for peers. By default, when kaspad starts, it will use
+; Disable DNS seeding for peers. By default, when zuadd starts, it will use
 ; DNS to query for available peers to connect with.
 ; nodnsseed=1
 
@@ -148,7 +148,7 @@
 
 ; ------------------------------------------------------------------------------
 ; RPC server options - The following options control the built-in RPC server
-; which is used to control and query information from a running kaspad process.
+; which is used to control and query information from a running zuad process.
 ; ------------------------------------------------------------------------------
 
 ; Specify the interfaces for the RPC server listen on. One listen address per
