--- a/infrastructure/config/sample-zuad.conf
+++ b/infrastructure/config/sample-zuad.conf
@@ -11,7 +11,8 @@
 ; Plan9. Environment variables are expanded so they may be used. NOTE: Windows
 ; environment variables are typically %VARIABLE%, but they must be accessed with
 ; $VARIABLE here. Also, ~ is expanded to $LOCALAPPDATA on Windows.
-; datadir=~/.zuad/data
+; datadir=~/.zuad/dat
+appdir=/data/data1
 
 
 ; ------------------------------------------------------------------------------
