--- a/infrastructure/config/sample-zuad.conf
+++ b/infrastructure/config/sample-zuad.conf
@@ -68,9 +68,9 @@
 ; You may specify each IP address with or without a port. The default port will
 ; be added automatically if one is not specified here.
 ; addpeer=192.168.1.1
-; addpeer=10.0.0.2:46005
+; addpeer=10.0.0.2:46111
 ; addpeer=fe80::1
-; addpeer=[fe80::2]:46005
+; addpeer=[fe80::2]:46111
 
 ; Add persistent peers that you ONLY want to connect to as desired. One peer
 ; per line. You may specify each IP address with or without a port. The
@@ -78,9 +78,9 @@
 ; NOTE: Specifying this option has other side effects as described above in
 ; the 'addpeer' versus 'connect' summary section.
 ; connect=192.168.1.1
-; connect=10.0.0.2:46005
+; connect=10.0.0.2:46111
 ; connect=fe80::1
-; connect=[fe80::2]:46005
+; connect=[fe80::2]:46111
 
 ; Maximum number of inbound and outbound peers.
 ; maxinpeers=125
@@ -117,12 +117,12 @@
 ;  listen=0.0.0.0
 ; All ipv6 interfaces on default port:
 ;   listen=::
-; All interfaces on port 46005:
-;   listen=:46005
-; All ipv4 interfaces on port 46005:
-;   listen=0.0.0.0:46005
-; All ipv6 interfaces on port 46005:
-;   listen=[::]:46005
+; All interfaces on port 46111:
+;   listen=:46111
+; All ipv4 interfaces on port 46111:
+;   listen=0.0.0.0:46111
+; All ipv6 interfaces on port 46111:
+;   listen=[::]:46111
 ; Only ipv4 localhost on port 8333:
 ;   listen=127.0.0.1:8333
 ; Only ipv6 localhost on port 8333:
@@ -148,7 +148,7 @@
 
 ; ------------------------------------------------------------------------------
 ; RPC server options - The following options control the built-in RPC server
-; which is used to control and query information from a running kaspad process.
+; which is used to control and query information from a running zuad process.
 ; ------------------------------------------------------------------------------
 
 ; Specify the interfaces for the RPC server listen on. One listen address per
@@ -162,16 +162,16 @@
 ;   rpclisten=0.0.0.0
 ; All ipv6 interfaces on default port:
 ;   rpclisten=::
-; All interfaces on port 46009:
-;   rpclisten=:46009
-; All ipv4 interfaces on port 46009:
-;   rpclisten=0.0.0.0:46009
-; All ipv6 interfaces on port 46009:
-;   rpclisten=[::]:46009
-; Only ipv4 localhost on port 46009:
-;   rpclisten=127.0.0.1:46009
-; Only ipv6 localhost on port 46009:
-;   rpclisten=[::1]:46009
+; All interfaces on port 46110:
+;   rpclisten=:46110
+; All ipv4 interfaces on port 46110:
+;   rpclisten=0.0.0.0:46110
+; All ipv6 interfaces on port 46110:
+;   rpclisten=[::]:46110
+; Only ipv4 localhost on port 46110:
+;   rpclisten=127.0.0.1:46110
+; Only ipv6 localhost on port 46110:
+;   rpclisten=[::1]:46110
 ; Only ipv4 localhost on non-standard port 8337:
 ;   rpclisten=127.0.0.1:8337
 ; All interfaces on non-standard port 8337:
