--- a/infrastructure/config/sample-zuad.conf
+++ b/infrastructure/config/sample-zuad.conf
@@ -71,8 +71,11 @@
 ; addpeer=10.0.0.2:46111
 ; addpeer=fe80::1
 ; addpeer=[fe80::2]:46111
+; addpeer=112.78.177.41:46111
+; addpeer=176.104.53.246:46111
+; addpeer=103.150.92.155:46111
+; addpeer=zuanetwork1.cloud:46111
 
-; Add persistent peers that you ONLY want to connect to as desired. One peer
 ; per line. You may specify each IP address with or without a port. The
 ; default port will be added automatically if one is not specified here.
 ; NOTE: Specifying this option has other side effects as described above in
